@@ -94,6 +94,12 @@ STATEMENT_SELECT_RECENT_CHANGES = \
         where virtual_wiki_name = ? \
         order by edit_date desc \
     ) where rownum <= ? 
+STATEMENT_SELECT_RECENT_CHANGES_TOPIC = \
+    select * from ( \
+      select * from jam_recent_change \
+        where topic_id = ? \
+        order by edit_date desc \
+    ) where rownum <= ? 
 STATEMENT_SELECT_WIKI_USER_CHANGES_ANONYMOUS = \
     select * from ( \
       select \
